--- a/views/base/production.html
+++ b/views/base/production.html
@@ -16,7 +16,7 @@
 
         <div id="planet-storage" class="storage-list">
             <header>
-                <h3>Stockage</h3>
+                <h3 data-translate="true">planet.storage.name</h3>
             </header>
             <section></section>
         </div>
@@ -26,7 +26,7 @@
 
         <script type="module">
             import App from '/static/js/core/app.js';
-
+            import Dictionnary from '/static/js/core/dictionnary.js';
             import { initBaseProduction} from '/static/js/production.js';
 
             App.init().then(() => { initBaseProduction() });
