--- a/views/map/planet.html
+++ b/views/map/planet.html
@@ -43,6 +43,7 @@
             import { initPlanetRelations } from '/static/js/components/planet/relations.js';
             import { initPlanetBuildings } from '/static/js/components/planet/buildings.js';
             import { initPlanetResources } from '/static/js/components/planet/resources.js';
+            import resourcesData from '/static/js/resources/resources.js';
 
             const urlParams = new URLSearchParams(window.location.search);
 
@@ -56,8 +57,8 @@
 
                 const planetResources = document.createElement('div');
                 for (let resource of planet.resources) {
-                  console.log(planet.name);
-                    console.log(resource.resources);
+                    resource = Object.assign(resource, resourcesData[resource.name]);
+
                     const resourcePicto = document.createElement('img');
                     resourcePicto.src= "/static/images/resources/"+resource.picto;
                     resourcePicto.alt=resource.name;
