--- a/static/css/planet.css
+++ b/static/css/planet.css
@@ -38,7 +38,7 @@
 #planet-relations {
     grid-column: 2;
     grid-row: 6/10;
-    z-index: 10;
+    z-index: 1000;
 }
 
 #planet-buildings {
@@ -123,7 +123,7 @@
   margin: 0;
   border-radius: 50%;
   position: relative;
-  background-size: 100%;
+  background-size: 100% 100% !important; /*When setting the prop background it reste background-size => flag important*/
   box-shadow: 0px 0px 50px rgba(200, 200, 255, 0.8);
 }
 
@@ -137,7 +137,7 @@
   border-radius: 50%;
   background: radial-gradient(circle at 50% 0px, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0) 58%);
   -webkit-filter: blur(5px);
-  z-index: 2;
+  z-index: 200;
 }
 .shape:after {
   content: "";
@@ -156,7 +156,7 @@
     background: radial-gradient(circle, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.4) 40%, rgba(0, 0, 0, 0.2) 50%);
     -webkit-transform: rotateX(90deg) translateZ(-160px);
     transform: rotateX(90deg) translateZ(-160px);
-    z-index: 1; }
+    z-index: 100; }
 
 .shape[data-type="arctic"] {
   background: url('../images/planet_type_arctic.png') no-repeat;
