logic for step planer

--- a/views/map/journey-planer.html
+++ b/views/map/journey-planer.html
@@ -12,7 +12,7 @@
     <div id="map">
         <div class="contextMenuMapWarper">
             <div class="contextMenuMap">
-                <div><span><span>test1</span></span></div> <div><span>test2</span></div> <div><span>test3</span></div> 
+                <div></div> 
                 <!-- TODO implement HTML auto -->
             </div>
         </div>
