--- a/static/css/map.css
+++ b/static/css/map.css
@@ -21,7 +21,7 @@ html {
 }
 
 #map > .fleet-location {
-    border: 4px solid #09b309;
+    border: 2px solid #09b309;
     border-radius: 100px;
 }
 
@@ -58,31 +58,31 @@ html {
     z-index: 30;
 }
 #map > .fleet-location-target > .north {
-     width : 2px;
-     height : 10px;
-     left : 14px;
-     top:-7px;
+    width : 2px;
+    height : 10px;
+    left : 14px;
+    top:-7px;
 }
 
 #map > .fleet-location-target > .south {
-     width : 2px;
-     height : 10px;
-     left : 14px;
-     top:27px;
+    width : 2px;
+    height : 10px;
+    left : 14px;
+    top:27px;
 }
 
 #map > .fleet-location-target > .west {
-     width : 10px;
-     height : 2px;
-     left : -7px;
-     top:14px;
+    width : 10px;
+    height : 2px;
+    left : -7px;
+    top:14px;
 }
 
 #map > .fleet-location-target > .east {
     width : 10px;
-     height : 2px;
-     left : 27px;
-     top:14px;
+    height : 2px;
+    left : 27px;
+    top:14px;
 }
 
 #map div.line{
@@ -90,6 +90,8 @@ html {
     z-index: -100;
     animation: line 3s linear infinite;
     background-image: url(../../static/images/map/line_step.png);
+    position: absolute;
+    transform-origin: 50% 50%;
 }
 
 #map > .range-circle {
@@ -109,6 +111,35 @@ html {
   to {
     background-position: 0px 0px;
   }
+}
+
+#map > .point {
+    position: absolute;
+    pointer-events: none;
+    height: 20px;
+    width: 20px;
+    transform: rotate(45deg);
+    background: #ffffff00;
+    transform-origin: center;
+}
+
+#map > .point > div {
+    position: absolute;
+    pointer-events: inherit;
+    background: #EFEFEF;
+    
+}
+
+#map > .point > .point-inner-1 {
+    height: 20px;
+    width: 2px;
+    left: 9px;
+}
+
+#map > .point > .point-inner-2 {
+    height: 2px;
+    width: 20px;
+    top: 9px;
 }
 
 #minimap {
