Treat review feedbacks

--- a/views/base/trade/sell.html
+++ b/views/base/trade/sell.html
@@ -10,16 +10,14 @@
         <div id="sell-form">
             <section>
                 <header>
-                    <h3>Créer une offre</h3>
+                    <h3 data-translate="true">trade.create_offer</h3>
                 </header>
                 <section>
                     <form>
                         <header>
                             <span></span>
                             <div>
-                                <p>
-                                    Offre :
-                                </p>
+                                <p><span data-translate="true">trade.offer</span> :</p>
                                 <div id="operation-selector" class="selector">
                                     <div data-operation-type="sell" class="selected">
                                         <div class="picto lot"></div>
@@ -34,10 +32,8 @@
                                 </div>
                             </div>
                             <div>
-                                <p>
-                                    Bien :
-                                </p>
-                                <div id="good-selector" class="selector">
+                                <p><span data-translate="true">trade.good</span> :</p>
+                                <div id="good-type-selector" class="selector">
                                     <div data-choice-type="resources" onclick="chooseType('resources');">
                                         <div class="picto money"></div>
                                     </div>
@@ -68,7 +64,7 @@
             </section>
             <section>
                 <header>
-                    <h3>Transport et Escorte</h3>
+                    <h3 data-translate="true">trade.transport</h3>
                 </header>
                 <section>
 
