--- a/views/base/production.html
+++ b/views/base/production.html
@@ -9,9 +9,11 @@
     <body>
         <div id="planet-production" class="resource-list">
             <header>
-                <h3>Ressources</h3>
+                <h3 data-translate="true">planet.resources</h3>
             </header>
-            <section></section>
+            <section>
+              <canvas id="resource-density" width="400px" height="400px"></canvas>
+            </section>
         </div>
 
         <div id="planet-storage" class="storage-list">
@@ -22,6 +24,7 @@
         </div>
 
         <script type="text/javascript" src="/config/config.js"></script>
+        <script type="text/javascript" src="/static/js/lib/chart.js"></script>
         <script type="module" src="/static/js/main.js"></script>
 
         <script type="module">
